<resources>
    <string name="FakeVersion">1.0</string>
    <string name="app_name">پرتال پرسنلی کوشا</string>
    <string name="EnterInformation">لطفا اطلاعات خود را وارد کنید.</string>
    <string name="NationalCode">کد ملی</string>
    <string name="AccountNumber">شماره حساب</string>
    <string name="Application">نرم افزار</string>
    <string name="Version">نسخه</string>
    <string name="Login">ورود</string>
    <string name="Cancel">انصراف</string>
    <string name="EmptyNationalCode">کد ملی را وارد نمایید</string>
    <string name="EmptyAccountNumber">شماره حساب را وارد نمایید</string>
    <string name="GetLegalBill">دریافت فیش حقوقی</string>
    <string name="ChooseMonth">انتخاب ماه</string>
    <string name="SearchMonth">جستجوی ماه</string>
    <string name="ChooseYear">انتخاب سال</string>
    <string name="SearchYear">جستجوی سال</string>
    <string name="TrafficController">مشاهده تردد</string>
    <string name="LeaveRequest">درخواست مرخصی</string>
    <string name="DateFrom">از تاریخ</string>
    <string name="DateTo">تا تاریخ</string>
    <string name="Time">ساعت</string>
    <string name="Day">روز</string>
    <string name="HowMuch">به میزان</string>
    <string name="Save">ثبت</string>
    <string name="Choose">انتخاب</string>
    <string name="Today">امروز</string>
    <string name="ViewContract">مشاهده قرارداد</string>
    <string name="NewLeaveRequest">درخواست مرخصی جدید</string>
    <string name="Get">دریافت</string>
    <string name="SignOut">خروج از اکانت</string>
    <string name="Home">صفحه اصلی</string>
    <string name="About">درباره ما</string>

    
</resources>
