<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="home"
            type="ir.negra.legalbill.viewmodels.fragments.VM_Home" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <LinearLayout
            android:id="@+id/LinearLayoutHome"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:gravity="center"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:id="@+id/LinearLayoutTrafficController"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/dw_button"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/ic_fingerprint"
                        android:tint="@android:color/white"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        fontPath="font/iransans_web_medium.ttf"
                        android:text="@string/TrafficController"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayoutLegalBill"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/dw_button"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/ic_receipt"
                        android:tint="@android:color/white"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        fontPath="font/iransans_web_medium.ttf"
                        android:text="@string/GetLegalBill"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/dw_button"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/_15sdp"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:tint="@android:color/white"
                        android:src="@drawable/icon_view_contract"
                        android:padding="@dimen/_5sdp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        fontPath="font/iransans_web_medium.ttf"
                        android:text="@string/ViewContract"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayoutLeaveRequest"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="match_parent"
                    android:background="@drawable/dw_button"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/ic_local_cafe"
                        android:tint="@android:color/white"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        fontPath="font/iransans_web_medium.ttf"
                        android:text="@string/LeaveRequest"/>

                </LinearLayout>



            </LinearLayout>

        </LinearLayout>





    </LinearLayout>
</layout>