<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="login"
            type="ir.negra.legalbill.viewmodels.fragments.VM_Login" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_40sdp"
        tools:ignore="ExtraText">

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/logo" />


        //___________________________ Start Layout National Code

        <LinearLayout
            android:id="@+id/LinearLayoutNationalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/dw_edit_back"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:src="@drawable/ic_contact_mail" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/_3sdp"
                android:background="@color/ML_Light_Gray" />

            <EditText
                android:id="@+id/EditTextNationalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center"
                android:hint="@string/NationalCode"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>
        //___________________________ End Layout National Code


        //___________________________ Start Layout Account Number

        <LinearLayout
            android:id="@+id/LinearLayoutAccountNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/dw_edit_back"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:src="@drawable/ic_account_balance_wallet" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/_3sdp"
                android:background="@color/ML_Light_Gray" />

            <EditText
                android:id="@+id/EditTextAccountNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center"
                android:hint="@string/AccountNumber"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>
        //___________________________ End Layout Account Number


        //___________________________ Start Layout Button Login
        <RelativeLayout
            android:id="@+id/RelativeLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/dw_button"
            android:padding="@dimen/_5sdp"
            >

            <ImageView
                android:id="@+id/ImageViewLogin"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_lock_open"
                android:tint="@android:color/white" />

            <TextView
                android:id="@+id/TextViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/Login"
                fontPath="font/iransans_web_medium.ttf"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp" />

            <com.cunoraz.gifview.library.GifView
                android:id="@+id/GifViewLogin"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:visibility="invisible"
                custom:gif="@drawable/loading" />

        </RelativeLayout>
        //___________________________ End Layout Button Login



    </LinearLayout>

</layout>
